<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"

    tools:context=".ui.dashboard.DashboardFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="56dp"
                android:src="@drawable/logobrain" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_do_you_want_to_remember_to_do"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/take_my_pill"

                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when_do_you_want_to_do_it"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkMonday"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="110dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkTuesday"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="110dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkWednesday"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="110dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkThursday"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="110dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friday"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkFriday"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="110dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkSaturday"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="110dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/checkSunday"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="110dp" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at_what_time"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Set time"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="?android:attr/selectableItemBackground"/>


            <Button
                android:id="@+id/btn_save"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/colorAccent"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="DONE"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>